updated meeting link

--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Found something interesting?</strong>
 
-                                    <p class="mb-0">I’m available for discussing it.</p>
+                                    <p class="mb-0"><a href="https://book.morgen.so/abhiramnj57/abhiram-one-on-one-meet">I’m available</a> for discussing it.</p>
+
                                 </div>
                             </div>
 
