REV: update info

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                                     <img src="images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <h3 class="pt-2 mb-3">a little bit about Abhiram</h3>
+                                <h3 class="pt-2 mb-3">A little bit about Abhiram</h3>
 
-                                <p>Myself  <a href="https://github.com/twilighty-abhi" target="_blank">Abhiram</a>, A sophomore BTech. Student Based in Kerala .</p>
+                                <p>Myself  <a href="https://github.com/twilighty-abhi" target="_blank">Abhiram</a>, A sophomore BTech. Student Based in Kerala, Who is interested in tech, Community management, cybersecurity and much more. I'm an enthusiast learner and a one who tries new things. </p>
 
                             </div>
                         </div>
@@ -461,7 +461,7 @@
                                     <strong class="site-footer-title d-block mb-3">About</strong>
 
                                     <p class="mb-2">
-                                        Abhiram is a great community builder and a genaralist person who focuses on web devlopment and Low code tools. Feel free to get in touch with me.
+                                       I'm a great community builder and a genaralist person who focuses on web devlopment and Low code tools. Feel free to get in touch with me.
                               </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
