--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="TemplateMo">
 
         <title>Abhiram NJ</title>
+        <link rel="icon" type="image/x-icon" href="\images\portrait-happy-excited-man-holding-laptop-computer.png">
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
