Fix: broken garden link updated

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </ul>
                     
                     <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <a class="custom-btn btn" href="https://garden.abhiramnj.live">
+                        <a class="custom-btn btn" href="https://garden.abhiramnj.com">
                            Digital Garden 🏡
                         </a>
                     
