--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
             <div class="cssload-box-loading"></div>
         </div>
 
-       
+
+
+        <div id="new-website-popup" class="modal fade" tabindex="-1" aria-labelledby="newWebsitePopupLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="newWebsitePopupLabel">New Website under construction</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>This website is out of date. Dont take the information found here to be up-to-date!</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -621,6 +640,14 @@
         <script src="js/jquery.magnific-popup.min.js"></script>
         <script src="js/magnific-popup-options.js"></script>
         <script src="js/custom.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+          // Trigger the popup once the page loads
+          window.addEventListener('load', function() {
+            var newWebsitePopup = new bootstrap.Modal('#new-website-popup');
+            newWebsitePopup.show();
+          });
+        </script>
 
     </body>
 </html>
