Update: Changed numerical up to date

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     <p>
                                         <span class="profile-small-title">Role</span>
                                         
-                                        <span><a href="https://airtable.com/shrhvg2G9y9SKsdHn/tblwnyIWaDEoPkRPz/viwfsG480lOFipKYo/reczpHE2LuhgXdY59">Learning Initiatives Intern-Tinkerhub</a></span>
+                                        <span>Learning Fellow-Tinkerhub</a></span>
                                     </p>
 
                                     <p>
@@ -206,7 +206,7 @@
 
                                     <p>
                                         <span class="profile-small-title">Connect</span>
-                                        <span><a href="mailto:admin@abhiramnj.live">admin@abhiramnj.live</a></span>
+                                        <span><a href="mailto:admin@abhiramnj.live">abhiramnj@gmail.com</a></span>
                                     </p>
                                 </div>
                             </div>
@@ -223,19 +223,19 @@
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
-                                        <strong class="featured-numbers">950+</strong>
+                                        <strong class="featured-numbers">5000+</strong>
 
                                         <p class="featured-text">People Impacted</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 pt-4">
-                                        <strong class="featured-numbers">5</strong>
+                                    <strong class="featured-numbers">7</strong>
 
                                         <p class="featured-text">Projects Finished</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
-                                        <strong class="featured-numbers">15+</strong>
+                                        <strong class="featured-numbers">30+</strong>
 
                                         <p class="featured-text">Sessions taken</p>
                                     </div>
