Fix: Corrected Email

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                                     <p>
                                         <span class="profile-small-title">Connect</span>
-                                        <span><a href="mailto:admin@abhiramnj.live">abhiramnj@gmail.com</a></span>
+                                        <span><a href="mailto:abhiramnj@gmail.com">abhiramnj@gmail.com</a></span>
                                     </p>
                                 </div>
                             </div>
