--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="newWebsitePopupLabel">New Website under construction</h5>
+                  <h5 class="modal-title" id="newWebsitePopupLabel">New Website Ready within a week</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
