Added new Website Popup
THis portfolio is depreciated. Popup to new one

--- a/index.html
+++ b/index.html
@@ -45,23 +45,25 @@
         </div>
 
 
+<div id="new-website-popup" class="modal fade" tabindex="-1" aria-labelledby="newWebsitePopupLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="newWebsitePopupLabel">Old Deprecated Portfolio</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>This website is out of date. Don't rely on the information found here!</p>
+        <p>Check out my new website instead:</p>
+        <a href="https://www.abhiramnj.com" class="btn btn-primary">Visit New Website</a>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-        <div id="new-website-popup" class="modal fade" tabindex="-1" aria-labelledby="newWebsitePopupLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="newWebsitePopupLabel">New Website Ready within a 5 days</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <p>This website is out of date. Dont take the information found here to be up-to-date!</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
 
 
 
